--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import 'demographic-survey/demographic-survey.scss';
+@import 'task/task.scss';
 
 *, *::before, *::after {
   box-sizing: border-box;
