--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-@import 'demographic-survey/demographic-survey.scss';
-@import 'task/task.scss';
+@import 'main/main.scss';
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -30,58 +29,4 @@ button:hover {
 
 .bold {
   font-weight: bold;
-}
-
-#sample-task {
-  display: none;
-  #instructions-demo {
-    border: 1px solid black;
-    margin-bottom: 10px;
-  }
-  .instructions-img {
-    width: 100%;
-  }
-}
-
-header {
-  text-align: center;
-  border-bottom: 1px solid lightgray;
-  margin-bottom: 25px;
-}
-
-main {
-  margin-bottom: 16px;
-}
-
-footer {
-  margin-top: auto;
-  border-top: 1px solid lightgray;
-  text-align: center;
-  font-size: 75%;
-}
-
-#progress-bar {
-  width: 100%;
-}
-
-#experiment {
-  display: none; /* start hidden but will become flex */
-  flex-direction: column;
-  align-items: center;
-
-  #button-row {
-    margin-top: 16px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-  }
-}
-
-#final-task-fields {
-  display: none;
-}
-
-#submit-button {
-  margin-left: auto;
-  display: block;
 }
