--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,3 @@
-@import 'main/main.scss';
-
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -12,7 +10,12 @@ html {
 
 body {
   margin: 0;
-  padding: 0 10%;
+  padding: 0;
+}
+
+html, body, #main {
+  height: 100%;
+  width: 100%;
 }
 
 /* some decent default button styling */
